# snarkVM-forked-demox

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
.circleci/: config.yml  semver-checks.sh
.github/workflows/: benchmarks.yml
algorithms/: Cargo.toml
algorithms/cuda/: Cargo.toml
circuit/: Cargo.toml
circuit/account/: Cargo.toml
circuit/algorithms/: Cargo.toml
circuit/collections/: Cargo.toml
circuit/environment/: Cargo.toml
circuit/network/: Cargo.toml
circuit/program/: Cargo.toml
circuit/types/: Cargo.toml
console/: Cargo.toml
console/account/: Cargo.toml
console/algorithms/: Cargo.toml
console/collections/: Cargo.toml
console/network/: Cargo.toml
curves/: Cargo.toml
fields/: Cargo.toml
ledger/: Cargo.toml
metrics/: Cargo.toml
parameters/: Cargo.toml  translation_credits.metadata  translation_credits.verifier
plugins/slipstream_plugin_interface/: Cargo.toml  README.md
plugins/slipstream_plugin_interface/src/: lib.rs  slipstream_plugin_interface.rs
plugins/slipstream_plugin_manager/: Cargo.toml
plugins/slipstream_plugin_manager/src/: lib.rs  slipstream_manager.rs  slipstream_service.rs
review/: 01-console-program.md  02-console-network.md  03-console-collections.md  04-circuit-program.md  05-circuit-types.md  06-circuit-collections.md  07-algorithms.md  08-synthesizer-program.md  09-synthesizer-process.md  10-synthesizer-core.md  11-ledger-block.md  12-ledger-store.md  13-parameters.md  14-testing.md  15-misc.md  README.md
synthesizer/: Cargo.toml
utilities/: Cargo.toml
vm/: lib.rs
wasm/: Cargo.toml
(+609 files in other folders)
