[package]
name = "snarkvm-slipstream-plugin-interface"
version = "4.7.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The SnarkVM Slipstream plugin interface."
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.anyhow]
workspace = true
