[package]
name = "snarkvm-slipstream-plugin-manager"
version = "4.7.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The SnarkVM Slipstream plugin manager."
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-slipstream-plugin-interface]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.libloading]
version = "0.8"

[dependencies.json5]
version = "0.4"
